--- a/src/01 - Fundamentals Part 1/Values and Var/index.html
+++ b/src/01 - Fundamentals Part 1/Values and Var/index.html
@@ -26,5 +26,6 @@
   <body>
     <h1>JavaScript Fundamentals - Part 1</h1>
     <script src="script.js"></script>
+    <script src="assignment1.js"></script>
   </body>
 </html>
