--- a/src/01 - Fundamentals Part 1/Values and Var/index.html
+++ b/src/01 - Fundamentals Part 1/Values and Var/index.html
@@ -26,6 +26,7 @@
   <body>
     <h1>JavaScript Fundamentals - Part 1</h1>
     <script src="script.js"></script>
-    <script src="assignment1.js"></script>
+    <script src="01 - Prac.js"></script>
+    <script src="02 - Prac.js"></script>
   </body>
 </html>
