Section 2 | let, Const, & Var

--- a/src/01 - Fundamentals Part 1/Values and Var/index.html
+++ b/src/01 - Fundamentals Part 1/Values and Var/index.html
@@ -28,5 +28,6 @@
     <script src="script.js"></script>
     <script src="01 - Prac.js"></script>
     <script src="02 - Prac.js"></script>
+    <script src="03 - Prac.js"></script>
   </body>
 </html>
